<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- editTextName -->
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_hint"
        android:inputType="text"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:textSize="16sp" />

    <!-- editTextEmail -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_hint"
        android:inputType="textEmailAddress"
        android:layout_below="@id/editTextName"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:textSize="16sp" />

    <!-- imageViewProfile -->
    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_pic_desc"
        android:clickable="true" />

    <!-- buttonSave -->
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_below="@id/imageViewProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <!-- Outras visualizações aqui -->

</RelativeLayout>























